--- a/capstone website/index.html
+++ b/capstone website/index.html
@@ -15,7 +15,7 @@
                     alt=""></a>
                 
             </div>
-            <div> <t> Parky </t> </div> 
+            <div> <t> <strong>Parky</strong> </t> </div> 
         </nav>
     </header>
     <!-- done1 -->
@@ -36,23 +36,14 @@
     <h1 id="h1main">Built With Parking Owners, For Parking Owners</h1>
     <div id="layout2">
         <div id="layout2left">
-            <img src="https://assets.website-files.com/5d55f1425cb6b7a18aa77528/5db8ae0cebac5e9213588d9f_revenue-graph.png"
+            <img src="./assets/Landing Page.jpeg"
                 alt="">
+            <img src="./assets/Stripe.jpeg">
         </div>
         <div id="layout2right">
             <h2>Increase Revenue</h2>
             <p>Owner friendly, full-stack parking management.</p>
             <div>
-                <div class="layout2rightcontent">
-                    <div>
-                        <img src="https://assets.website-files.com/5d55f1425cb6b7a18aa77528/5f1a1f2937a53c7a2bfb65b7_slider.png"
-                            alt="" id="transimg" class="animationimg">
-                    </div>
-                    <div>
-                        <h3>Dynamic Pricing</h3>
-                        <p>We analyze market conditions and automatically adjust prices to maximize occupancy.</p>
-                    </div>
-                </div>
                 <div class="layout2rightcontent">
                     <div>
                         <img src="https://assets.website-files.com/5d55f1425cb6b7a18aa77528/5f1a1f2ad706274a0ef3a1a1_night.png"
@@ -81,7 +72,7 @@
                     </div>
                     <div>
                         <h3>Transparent Revenue Share</h3>
-                        <p>No upfront cost. We’ll cover payment processing, enforcement, marketing, & garage operations.
+                        <p>No upfront cost. We’ll cover payment processing& marketing.
                         </p>
                     </div>
                 </div>
@@ -92,71 +83,7 @@
     <br>
     <!-- done4 -->
     <!-- done3 -->
-    <div class="parkysdiv1">
-        <div class="parky1left" id="widi">
-            <h2>Transparent Operation</h2>
-            <p>We share all of our data with you, so you’re always aware what’s happening on your property.</p>
-            <strong>Reporting & Analytics</strong>
-            <p>Forecast occupancy and maximize your revenue with transparent data.</p>
-            <strong>Real Time Updates</strong>
-            <p>Your dashboard updates with each parking renta making it easy to know whats
-                happening on your property.</p>
-            <strong>Your Customers Come First</strong>
-            <p>Reserve the lot, set aside spaces for guests, offer free customer validation & more.</p>
-        </div>
-        <div class="parky1right">
-            <img id="bigwidthimg"
-                src="https://assets.website-files.com/5d55f1425cb6b7a18aa77528/5f176d82faf9c74e758249b6_dashboard-p-1080.png"
-                alt="lisa reynolds" />
-        </div>
-    </div>
-    <br>
-    <br>
-    <!-- done3 -->
-    <div id="parkylayout2">
-        <div id="parkylayout2left">
-            <img src="https://assets.website-files.com/5d55f1425cb6b7a18aa77528/5d8e56a745d6500e5de20c14_enforced.png"
-                alt="">
-        </div>
-        <div id="parkylayout2right">
-            <h2>Automated Enforcement</h2>
-            <p>Ensure every driver pays in full with our multifaceted approach</p>
-            <div>
-                <div class="parkylayout2rightcontent">
-                    <div>
-                        <img src="https://assets.website-files.com/5d55f1425cb6b7a18aa77528/5f1746f70e9b2f62828bc0a3_alpr.png"
-                            alt="" class="animationimg">
-                    </div>
-                    <div>
-                        <h3>LPR Cameras</h3>
-                        <p>Every vehicle is scanned upon entry by cameras mounted at each access point.</p>
-                    </div>
-                </div>
-                <div class="parkylayout2rightcontent">
-                    <div>
-                        <img src="https://assets.website-files.com/5d55f1425cb6b7a18aa77528/5f177034af74df8b86413b9e_tow.png"
-                            alt="" class="animationimg">
-                    </div>
-                    <div>
-                        <h3>Local Partners</h3>
-                        <p>Top-rated local companies provide additional enforcement at peak times & remove violators.
-                        </p>
-                    </div>
-                </div>
-                <div class="parkylayout2rightcontent">
-                    <div>
-                        <img src="https://assets.website-files.com/5d55f1425cb6b7a18aa77528/5f17467d93b9a169c1bc99cb_spaceforce.png"
-                            alt="" class="animationimg">
-                    </div>
-                    <div>
-                        <h3>Space Force</h3>
-                        <p>Drivers are incentivized to catch & report violators directly through our app, providing
-                            constant, random license plate scannin</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <br>
     <br>
     <div class="parkysdiv1">
@@ -168,10 +95,11 @@
                 and increased long term revenue.</p>
             <strong>No Faulty Equipment</strong>
             <p>No paper tickets to refill, no broken gates, no repairs, no downtime.</p>
-            <strong>LPR Cameras Included for Parking Garages</strong>
-            <p>Rentals are automatically started & ended for repeat customers based on their license plate being scanned
-                when they enter and exit the garage.</p>
+
         </div>
+    </div>
+    <div id="layout2left">
+        <img src="./assets/Search Results.jpeg" alt="">
     </div>
     <footer id="parkyfooter">
         <div id="footercontainer">
